test/squareFunctionReplace2.slq

def f[n:!â„•]qfreeâ‡’vector(n,0:ğ”¹);
def main(){
	f[1][2]:=H(f[1][2]); // error
}
